--- a/app.json
+++ b/app.json
@@ -23,6 +23,11 @@
     "PYTHON_FILE": {
       "description": "Name of the python file that you need to run. [use -m if you need to run __main__.py from a folder]",
       "value": ""
+    },
+     "OTHER_CMD": {
+      "description": "If you need to run any bash command other than python specify here",
+      "value": "None",
+      "required": false
     }
   },
   "addons": [
