--- a/app.json
+++ b/app.json
@@ -32,10 +32,21 @@
   },
   "addons": [
   ],
-  "stack": "container",
-  "buildpacks": [{
-    "url": "heroku/python"
-  }],
+  "stack": "heroku-20",
+  "buildpacks": [
+    {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+    },
+    {
+      "url": "https://github.com/SayanthD/aria2-heroku"
+    },
+    {
+      "url": "https://github.com/HasibulKabir/heroku-buildpack-rarlab"
+    },
+    {
+      "url": "heroku/python"
+    }
+  ],
   "formation": {
     "worker": {
       "quantity": 1,
